<resources>
    <string name="app_name">Grupo Zap</string>

    <string name="back">Back</string>
    <string name="bedrooms">Bedrooms: %d</string>
    <string name="buy">Buy</string>
    <string name="city_neighborhood">Type City or Neighborhood</string>
    <string name="monthly_condo_fee">Condo Fee: R$%s</string>
    <string name="no_filter">Both</string>
    <string name="other_details">Other Details</string>
    <string name="parking_spaces">Parking Spaces: %d</string>
    <string name="portal_radios">Choose Portal</string>
    <string name="price_desc_rental">Rental: R$%1$s + Condo Fee: R$%2$s</string>
    <string name="price_desc_sale">Condo Fee: R$%s</string>
    <string name="price_full">R$ %s</string>
    <string name="price_to">Until R$%s</string>
    <string name="real_state_small_details">Area: %1$d m\u00B2 &#8226; Bedrooms: %2$d</string>
    <string name="rent">Rent</string>
    <string name="search">Search</string>
    <string name="usable_area">Usable Area: %d m\u00B2</string>
    <string name="viva_real">Viva Real</string>
    <string name="yearly_iptu">Yearly IPTU: R$%s</string>
    <string name="zap">Zap</string>

    <string name="tools_city" translatable="false">City X</string>
    <string name="tools_price_to" translatable="false">Until 10000</string>

</resources>
