<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="br.com.desafio.grupozap.features.search.SearchViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.search.SearchFragment">

        <ProgressBar
            android:id="@+id/searchProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            style="@android:style/Widget.ProgressBar.Horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchCityNeighborhoodInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/searchBuyToggleButton"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchCityNeighborhoodAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_neighborhood"
                android:text="@={viewModel.filterView.location}"
                android:maxLines="1"
                tools:text="@string/tools_city"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/searchBuyToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@drawable/toggle_selector"
            android:textOn="@string/buy"
            android:textOff="@string/buy"
            android:textAllCaps="true"
            android:checked='@{viewModel.filterView.forSale}'
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/searchCityNeighborhoodInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchRentToggleButton"
            app:layout_constraintBottom_toTopOf="@+id/searchPortalLabelText"
            />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/searchRentToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@drawable/toggle_selector"
            android:textOn="@string/rent"
            android:textOff="@string/rent"
            android:textAllCaps="true"
            android:checked='@{!viewModel.filterView.forSale}'
            app:layout_constraintTop_toTopOf="@id/searchBuyToggleButton"
            app:layout_constraintStart_toEndOf="@id/searchBuyToggleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/searchBuyToggleButton"
            />

        <TextView
            android:id="@+id/searchPortalLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/portal_radios"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/searchPortalDividerView"
            app:layout_constraintStart_toStartOf="@+id/searchPortalDividerView"
            app:layout_constraintTop_toBottomOf="@+id/searchBuyToggleButton" />

        <View
            android:id="@+id/searchPortalDividerView"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/searchPortalRadioGroup"
            app:layout_constraintStart_toStartOf="@+id/searchPortalRadioGroup"
            app:layout_constraintEnd_toEndOf="@+id/searchPortalRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/searchPortalLabelText"/>

        <RadioGroup
            android:id="@+id/searchPortalRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/portal_radios"
            app:layout_constraintTop_toBottomOf="@+id/searchPortalDividerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/searchPriceLabelText">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/searchNoFilterRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_filter"
                android:checked='@{viewModel.filterView.portal == "ALL" ? true : false}'
                android:onClick='@{() -> viewModel.filterView.setPortal("ALL")}'
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/searchZapRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zap"
                android:checked='@{viewModel.filterView.portal == "ZAP" ? true : false}'
                android:onClick='@{() -> viewModel.filterView.setPortal("ZAP")}'
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/searchVivaRealRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viva_real"
                android:checked='@{viewModel.filterView.portal == "VIVA_REAL" ? true : false}'
                android:onClick='@{() -> viewModel.filterView.setPortal("VIVA_REAL")}'
                />

        </RadioGroup>

        <TextView
            android:id="@+id/searchPriceLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text='@{String.format(@string/price_to, viewModel.filterView.priceLabel)}'
            android:textSize="15sp"
            tools:text="@string/tools_price_to"
            app:layout_constraintBottom_toTopOf="@+id/searchPriceSeekBar"
            app:layout_constraintStart_toStartOf="@+id/searchPriceSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/searchPortalRadioGroup" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/searchPriceSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:max="@integer/max_price_interval"
            android:progress='@{viewModel.filterView.priceRate}'
            app:layout_constraintBottom_toTopOf="@+id/searchFilterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchPriceLabelText"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/search"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/searchPriceSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>